--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
@@ -26,8 +27,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.2.2",
+    "mockjs": "^1.1.0",
     "prettier": "^1.19.1",
-    "sass": "^1.26.3",
+    "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "vue-property-decorator": "^8.4.2",
     "vue-template-compiler": "^2.6.11"
